debug_rapm_inputs_fixed_utf8.txt
python : Traceback (most recent 
call last):
At line:1 char:1
+ python -m nhl_pipeline.scripts.
compute_corsi_apm --season 
20242025 -- ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~
    + CategoryInfo          : 
Not    Specified: (Traceback 
(most r    ecent call 
last)::String) [],     
RemoteException
    + FullyQualifiedErrorId : 
Nat    iveCommandError
 
  File "<frozen runpy>", line 
189, in _run_module_as_main
  File "<frozen runpy>", line 
159, in _get_module_details
  File "<frozen 
importlib._bootstrap_external>", 
line 1161, in get_code
  File "<frozen 
importlib._bootstrap_external>", 
line 1091, in source_to_code
  File "<frozen 
importlib._bootstrap>", line 
488, in _call_with_frames_removed
  File "C:\Users\akork\APM to 
LLM Web App\nhl_pipeline\scripts\
compute_corsi_apm.py", line 727
    stats = {
            ^
SyntaxError: '{' was never closed
